Configuration parameter mechanism changed to YAML 'mormo.conf' file

--- a/mormo.conf
+++ b/mormo.conf
@@ -1,7 +1,10 @@
+
+# Configuration file on host which command need to capture
+
 # MongoDB Details
 MONGODB:
     USER   : mormow
     PASSWD : passwd#123@QW!
-    HOST   : localhost 
+    HOST   : localhost
     PORT   : 27017
     DBNAME : commandlogs
