--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
+configparser==3.5.0
+Django==2.0.4
+mongoengine==0.15.0
+mysqlclient==1.3.12
 pymongo==3.6.1
 PyYAML==3.12
+openpyxl==2.5.3
+pandas==0.22.0
