--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 static_cdn/* linguist-vendored
-*.py linguist-vendored=false
 *.sh linguist-vendored=false
-*.html linguiest-vendored=True
+*.html linguiest-vendored=false
